--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 *{box-sizing: border-box;
 font-family:'verdana';
-background-color: rgb(204, 220, 236);}
+background-color:whitesmokegit}
 h1{font-size:26px;
     font-weight: 400;
     }
