--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ body{background: url('./IMAGE/Wave.svg') no-repeat fixed;background-color: rgb(6
 background-position: top;
 }
 
+.aligncenter{
+    text-align: center;
+    text-decoration: underline;
+}
 
 a{text-decoration: none;
 }
@@ -23,6 +27,8 @@ a h3{color: greenyellow;}
 
 h1{font-size:2rem;
     font-weight: 400;
+    text-decoration: underline;
+
     }
 h2{font-size:1.8rem; font-weight: 300;}
 h3{font-size: 1.5rem;font-weight:200;}
@@ -174,14 +180,14 @@ max-width: 300px;}
               place-items:center ;
                 }
 
-.pro-card{box-shadow: 0px 0px 8px 3px rgba(237, 235, 235, 0.6);
+.pro-card{background-image: linear-gradient(rgba(55, 71, 63,0.3),rgba(28, 113, 101,0.2));
     border-radius: 2rem;
     padding: 1rem;
 
 text-align: center;
 height: fit-content;
 max-width: 400px;
-background-image: linear-gradient(rgb(9, 75, 9),black);
+
 
 overflow: hidden;
 }  
@@ -205,16 +211,21 @@ overflow: hidden;
 .services{display:grid;
      grid-template-columns: repeat(2, minmax(200px,1fr));
     gap: 1rem;
-  
+    place-items: center;
+   
    
 }
 
-.service-card{border:2px rgb(161, 241, 214) solid;
+.service-card{ 
 padding: 0.5em;
 border-radius: 1em;
-background-image: linear-gradient(rgb(4, 131, 80),black);
+max-width: 400px;
+
+
+background-image: linear-gradient(rgba(55, 71, 63,0.3),rgba(28, 113, 101,0.2));
+
 }
-.service-card h2{font-size: 1.8rem;}
+
 
 
 
@@ -266,19 +277,23 @@ justify-content: center;
 @media screen and (max-width:700px) {
    
     .container{margin:3px;
-    height: fit-content;}
+    height: fit-content}
     .intro{
         grid-template-columns: repeat(1,1fr);
     }
     .my-pic img{max-width: 360px;}
 
-
+.details{
+    max-width: 100vw;
+    white-space:pre-wrap;
+}
 
     .about{
 
         display: grid;
         grid-template-columns: repeat(1,1fr);
         place-items:normal start;
+        max-width: 100%;
        
     }
 
@@ -288,7 +303,15 @@ justify-content: center;
         place-items:normal ;
         }
 
+        .pro-container{display: grid;
+            grid-template-columns: repeat(1,minmax(100px,1fr));
+            gap: 2rem;
+    
+      place-items:center ;
+        }  
+
   .services{display:grid;
             grid-template-columns: repeat(1, minmax(200px,1fr));
-           gap: 1rem;}
+           gap: 1rem;
+        place-items: center;}
 }
