--- a/index.css
+++ b/index.css
@@ -99,7 +99,8 @@ background-color:;
 
 
 .intro{
-    
+   
+   
   
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -108,15 +109,25 @@ background-color:;
     height: 100vh;
 }
 
-.intro h1{
+.intro h1{background-color: rgb(36, 219, 134);
+width:fit-content;
+      font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5rem;
+     text-decoration: none;
+    padding: 1rem;
+
+color: black;
+font-weight: 800;
+
 }
 .intro h2{
-    font-size: 1.5rem;
+    background-color: rgb(148, 37, 56);
+    width: fit-content;
+    padding: 0.4rem;
+
 }
 .intro-text{
-  
-     
+    
      padding:1rem;margin: 1rem;
      border-radius: 2rem;
 }
@@ -181,7 +192,7 @@ max-width: 300px;}
               place-items:center ;
                 }
 
-.pro-card{background-image: linear-gradient(rgba(179, 229, 203, 0.3),rgba(48, 60, 58, 0.2));
+.pro-card{background-image: linear-gradient(rgba(179, 229, 203, 0.3),rgba(140, 228, 215, 0.2));
     border-radius: 2rem;
     padding: 1rem;
 
@@ -246,17 +257,22 @@ background-image: linear-gradient(rgba(102, 128, 115, 0.3),rgba(28, 113, 101,0.4
 
 .contact form {border: 2px solid rgb(161, 241, 214);
     
-    border-radius: 1em;
-padding: 1rem;
+    border-radius: 1rem;
+padding: 0.5rem;
 width: 100%;
 max-width: 600px;}
-.contact input,textarea{padding: 4px;font-size: 
-15px;
-color: white;
+label{
+    margin: 0.5rem;
+}
+.contact input,textarea{padding:0.5rem;
+  
+    font-size: 1.2rem;
+color:aquamarine;
 background-color:transparent;
     border: 2px rgb(161, 241, 214) solid;
-    border-radius: 10px;
+    border-radius:1rem;
 width: 100%;}
+
 input[type='submit']{width: 100px;
     background:transparent;
 border-radius: 10px;
@@ -283,7 +299,7 @@ justify-content: center;
     .intro{
         grid-template-columns: repeat(1,1fr);
     }
-    .my-pic img{max-width: 360px;}
+    .my-pic img{max-width: 300px;}
 
 .details{
     max-width: 100vw;
