--- a/index.css
+++ b/index.css
@@ -1,112 +1,99 @@
-*{box-sizing: border-box;
-font-family:'verdana';
-background-color:whitesmokegit;
+@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono&display=swap');
 
+* {
+  box-sizing: border-box;
+
+  background-color: whitesmokegit;
+ 
 }
-body{background: url('./IMAGE/Wave.svg') no-repeat fixed;background-color: rgb(6, 6, 6);
-    background-blend-mode:color-dodge;
-    
-    background-size:cover;
-    color: rgb(188, 246, 188);
-background-position: top;
-}
-
-.aligncenter{
-    text-align: center;
-
-    margin: 1rem;
+body {font-family: 'Fragment Mono', monospace;
+  background-color: black;
+  background-size: cover;
+  color: rgb(188, 246, 188);
+  background-position: top;
 }
 
-a{text-decoration: none;
+.aligncenter {
+  text-align: center;
+
+  margin: 1rem;
 }
 
+a {
+  text-decoration: none;
+}
 
+h1 {
+  font-size: 2rem;
+  font-weight: 400;
 
-
-
-
-
-
-h1{font-size:2rem;
-    font-weight: 400;
-
-width: 100%;
-font-weight: 600;
+  width: 100%;
+  font-weight: 600;
   text-align: center;
   color: rgb(24, 207, 137);
 
-    }
-h2{font-size:1.8rem; font-weight: 300;
 }
-h3{font-size: 1.5rem;font-weight:200;}
-p{font-size: 1.4rem;
-line-height: 1.7;}
-
-
-
-
-
-
-
-
-
-
-header a{text-decoration: none;
-margin: 2px;
-display: block;
-color:rgb(30, 29, 29);
-font-weight: bolder;
-background-color:rgb(239, 122, 122);
-
-
-margin:2px;
-padding: 4px;
-border-radius: 10px;
-width: 5rem;
-
+h2 {
+  font-size: 1.8rem;
+  font-weight: 300;
 }
-header{display: flex;
-    flex-wrap: wrap;
-    height: 50px;
-    justify-content: center;
-align-items:;
+h3 {
+  font-size: 1.5rem;
+  font-weight: 200;
 }
-header a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    height: 40px;
-  
-    
-    object-fit:cover;
-   
-
-    border-radius:10px;
- 
+p {
+  font-size: 1.4rem;
+  line-height: 1.7;
 }
 
+header a {
+  text-decoration: none;
+
+  display: block;
+  color: rgb(21, 20, 20);
+  font-weight: bolder;
+  background-color: rgb(239, 122, 122);
+
+  margin: 1rem;
+  padding: 4px;
+  border-radius: 10px;
+  width: 5rem;
+}
+
+header a:hover{
+  background-color: aquamarine;
+
+}
+header {
+  display: flex;
+  flex-wrap: wrap;
+  height: 50px;
+  justify-content:center;
+
+  align-items: ;
+}
+header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 40px;
+
+  object-fit: cover;
+
+  border-radius: 10px;
+}
 
 
 
 
 
-
-
-
-
-
-
-
-.container{
-    margin-left: 50px;
-    margin-right: 50px;
- display:grid;
-place-items: center;
-min-height: 100vh;
-
-
-
+.container {
+  margin-left: 50px;
+  margin-right: 50px;
+  display: grid;
+  place-items:center;
+  min-height: 100vh;
 }
 
 
@@ -114,303 +101,263 @@ min-height: 100vh;
 
 
 
-.intro{
-   
-   
-  
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    place-items: center;
-  column-gap:1rem;
-    height: 100vh;
+.intro {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  column-gap: 1rem;
+  height: 100vh;
 }
 
-.intro h1{
-   
-width:fit-content;
-      font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2.3rem;
-   
-     text-decoration: none;
-    padding: 1rem;
-    /* text-shadow: 2px 3px 3px  rgb(215, 68, 42); */
-    /* white-space: nowrap; */
-    text-shadow: 2px 3px 3px  rgb(194, 4, 61);
-color: rgb(154, 229, 154);
-font-weight: 700;
+.intro h1 {
+  width: fit-content;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2.3rem;
 
 
+  text-decoration: none;
+  padding: 1rem;
+  /* text-shadow: 2px 3px 3px  rgb(215, 68, 42); */
+  /* white-space: nowrap; */
+  text-shadow: 2px 3px 3px rgb(194, 4, 61);
+  color: rgb(154, 229, 154);
+  font-weight: 700;
 }
 
-
-    
-
-.intro h2{
-    background-color: rgb(148, 37, 56);
-    width: fit-content;
-    padding: 0.4rem;
-    text-align: center;
-
+.intro h2 {
+  background-color: rgb(148, 37, 56);
+  width: fit-content;
+  padding: 0.4rem;
+  text-align: center;
 }
-.intro-text{
-    
-     padding:1rem;margin: 1rem;
-     border-radius: 2rem;
+.intro-text {
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 2rem;
 }
-.my-pic img{ border-radius: 3rem;
-border: 2px solid lightgreen;
-max-width: 250px;}
-
-
-
-
-
-
-
-
-
-
-
-.about{
-
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    place-items: center;
-   height: 100vh;
+.my-pic img {
+  border-radius: 3rem;
+  /* border: 2px solid lightgreen; */
+  max-width: 250px;
+  background-color: rgb(65, 56, 56);
 }
 
 
 
 
-
-
-
-
-
-
-.skills{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    place-items:center ;
-    width: 100%;
-  
-
- 
-}
-.skill-card{text-align: center;
-    max-width: 200px;
-    margin:0;
+.about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  height: 100vh;
   
 }
-.skill-card h2{
-   
-    margin: 0;
-   
-}
-.skill-card svg{
-   fill:rgb(188, 246, 188);
-   
-   animation: card_animate 1s infinite alternate-reverse;
-   position: relative;
 
+
+.skills {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  width: 100%;
+}
+.skill-card {
+  text-align: center;
+  max-width: 200px;
+  margin: 0;
+}
+.skill-card h2 {
+  margin: 0;
+}
+.skill-card svg {
+  fill: rgb(149, 224, 149);
+
+  animation: card_animate 1s infinite alternate-reverse;
+  position: relative;
 }
 
 @keyframes card_animate {
-    0%{  top: 0px;
-        /* transform: rotate(20deg); */
-    }
+  0% {
+    top: 0px;
 
-    100%{top:20px;
-        /* transform:rotate(-20deg); */
-    }
-    
+    fill: rgb(159, 203, 189);
+  }
+
+  100% {
+    top: 10px;
+    fill: rgb(127, 165, 108);
+  }
+}
+
+
+
+.pro-container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(100px, 1fr));
+
+  gap: 1rem;
+
+  place-items: center;
 }
 
 
 
 
+.pro-card {
+  border-radius: 2rem;
+  padding: 0rem;
+  margin: 1rem;
+  border: 3px solid rgb(36, 219, 134);
 
+  text-align: center;
+  height: fit-content;
+  max-width: 400px;
 
-
-.pro-container{display: grid;
-                    grid-template-columns: repeat(2,minmax(100px,1fr));
-                
-                    gap: 1rem;
-         
-              place-items:center ;
-                }
-
-.pro-card{
-    border-radius: 2rem;
-    padding: 0rem;
-    margin: 1rem;
-    border: 3px solid rgb(36, 219, 134);
-
-text-align: center;
-height: fit-content;
-max-width: 400px;
-
-
-
-overflow: hidden;
-}  
-
-
-
-
-
-.pro-card img{
-  
-   width: 100%;
-   height:100%;
-   object-fit: contain;
-  
-
-  
-}
-.pro-card:hover{
-background-color:rgb(105, 12, 12);
-border: 2px solid rgb(105, 12, 12);
-
+  overflow: hidden;
 }
 
-.pro-card a{text-decoration: none; }
+.pro-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.pro-card:hover {
+  background-color: rgb(105, 12, 12);
+  border: 2px solid rgb(105, 12, 12);
+}
 
-.pro-card h3{
-    color:lightgreen;
+.pro-card a {
+  text-decoration: none;
+}
+
+.pro-card h3 {
+  color: lightgreen;
 }
 
 
 
+.service-container {
+}
+.services {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  gap: 1rem;
+  place-items: center;
+}
+
+.service-card {
+  padding: 0.5em;
+  border-radius: 1em;
+  padding: 1rem;
+  width: 100%;
+  min-height: 250px;
+  border: 2px solid rgb(161, 241, 214);
+}
 
 
 
+.contact {
+  display: grid;
+  grid-template-columns: auto;
+  place-items: center;
+  width: 100%;
+}
 
+.contact form {
+  border: 2px solid rgb(161, 241, 214);
 
-.service-container{
+  border-radius: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 600px;
+}
+label {
+  margin: 0.5rem;
+}
+.contact input,
+textarea {
+  padding: 0.5rem;
+
+  font-size: 1.2rem;
+  color: aquamarine;
+  background-color: transparent;
+  border: 2px rgb(161, 241, 214) solid;
+  border-radius: 1rem;
+  width: 100%;
+}
+
+input[type="submit"] {
+  width: 100px;
+  background: transparent;
+  border-radius: 10px;
+}
+
+input[type='submit']:hover{
+  cursor: pointer;
+  background-color: rgb(164, 233, 210);
+  color: black;
 
 }
-.services{display:grid;
-     grid-template-columns: repeat(2, minmax(200px,1fr));
+.contact div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin: 1em;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin: 3px;
+    height: fit-content;
+  }
+  .intro {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .my-pic img {
+    max-width: 300px;
+  }
+
+  .details {
+    max-width: 100vw;
+    white-space: pre-wrap;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    place-items: normal start;
+    max-width: 100%;
+  }
+
+  .skills {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+  }
+  .skill-card {
+    max-width: 100px;
+  }
+  .skill-card h2 {
+    margin: 0;
+  }
+  .pro-container {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(100px, 1fr));
+    gap: 2rem;
+
+    place-items: center;
+  }
+
+  .pro-card {
+    max-width: 90%;
+  }
+
+  .services {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(200px, 1fr));
     gap: 1rem;
     place-items: center;
-   
-   
-}
-
-.service-card{ 
-padding: 0.5em;
-border-radius: 1em;
-padding: 1rem;
-width:100%;
-min-height:250px;
-border: 2px solid rgb(161, 241, 214);
-
-
-
-}
-
-
-
-
-
-
-
-
-
-.contact{display:grid;
-    grid-template-columns:auto;
-    place-items: center;
- width: 100%;
-  
-
-}
-
-.contact form {border: 2px solid rgb(161, 241, 214);
-    
-    border-radius: 1rem;
-padding: 0.5rem;
-width: 100%;
-max-width: 600px;}
-label{
-    margin: 0.5rem;
-}
-.contact input,textarea{padding:0.5rem;
-  
-    font-size: 1.2rem;
-color:aquamarine;
-background-color:transparent;
-    border: 2px rgb(161, 241, 214) solid;
-    border-radius:1rem;
-width: 100%;}
-
-input[type='submit']{width: 100px;
-    background:transparent;
-border-radius: 10px;
-}
-.contact div{display: flex;
-    flex-direction: column;
-justify-content: center;
-
- margin: 1em;}
-
-.resume img{border:2px black solid;}
-
-
-
-
-
-
-
-
-@media screen and (max-width:768px) {
-   
-    .container{margin:3px;
-    height: fit-content}
-    .intro{
-        grid-template-columns: repeat(1,1fr);
-    }
-    .my-pic img{max-width: 300px;}
-
-.details{
-    max-width: 100vw;
-    white-space:pre-wrap;
-}
-
-    .about{
-
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        place-items:normal start;
-        max-width: 100%;
-       
-    }
-
-    .skills{
-        display:grid;
-        grid-template-columns: repeat(2,1fr);
-        place-items:center ;
-        }
-        .skill-card{
-            max-width: 100px;
-        }
-.skill-card h2{
-    margin: 0;
-  
-}
-        .pro-container{display: grid;
-            grid-template-columns: repeat(1,minmax(100px,1fr));
-            gap: 2rem;
-    
-      place-items:center ;
-        }  
-
-        .pro-card{
-            max-width: 90%;
-        }
-
-  .services{display:grid;
-            grid-template-columns: repeat(1, minmax(200px,1fr));
-           gap: 1rem;
-        place-items: center;}
+  }
 }
