--- a/index.css
+++ b/index.css
@@ -31,6 +31,9 @@ h1 {
   font-weight: 600;
   text-align: center;
   color: rgb(24, 207, 137);
+  box-shadow: 0 0 10px 10px rgba(127, 255, 212, 0.3);
+  border-radius: 1rem;
+
 
 }
 h2 {
@@ -58,10 +61,12 @@ header a {
   padding: 4px;
   border-radius: 10px;
   width: 5rem;
+  box-shadow: 3px 3px 3px  rgb(116, 110, 110);
 }
 
 header a:hover{
   background-color: aquamarine;
+  box-shadow: 0 0 10px 10px rgba(127, 255, 212, 0.3);
 
 }
 header {
@@ -104,7 +109,7 @@ header a {
 .intro {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  place-items: center;
+  place-items:center;
   column-gap: 1rem;
   height: 100vh;
 }
@@ -147,12 +152,19 @@ header a {
 
 .about {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  place-items: center;
+  grid-template-columns: repeat(1, 1fr);
+  place-items:center;
   height: 100vh;
+ 
+  text-align: center;
   
 }
-
+.skill-name{
+  background-color:rgb(235, 75, 17);
+  padding: 2px;
+  border-radius: 5px;
+  box-shadow: 2px 3px 3px red;
+}
 
 .skills {
   display: grid;
@@ -240,7 +252,7 @@ header a {
 .services {
   display: grid;
   grid-template-columns: repeat(2, minmax(200px, 1fr));
-  gap: 1rem;
+  gap: 2rem;
   place-items: center;
 }
 
@@ -248,9 +260,11 @@ header a {
   padding: 0.5em;
   border-radius: 1em;
   padding: 1rem;
+  margin: 1rem;
   width: 100%;
   min-height: 250px;
   border: 2px solid rgb(161, 241, 214);
+
 }
 
 
@@ -327,7 +341,7 @@ input[type='submit']:hover{
   .about {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    place-items: normal start;
+    place-items: ;
     max-width: 100%;
   }
 
